<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">



    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Normal Image-->
                <ImageView
                    android:id="@+id/contentPageImage"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"/>     <!-- Height of image on content page -->

                <!--Image Slider-->
                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/contentPageImageSlider"
                    android:layout_width="match_parent"
                    custom:pager_animation="Accordion"
                    custom:auto_cycle="true"
                    custom:indicator_visibility="visible"
                    custom:pager_animation_span="1100"
                    android:layout_height="230dp"/>     <!-- Height of image slider on content page -->

                <br.liveo.navigationliveo.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/contentPageImageSlider"
                    android:layout_marginTop="-35dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_star"
                    app:fab_elevationCompat="6dp"
                    app:fab_colorNormal="#1565C0"
                    app:fab_colorPressed="#2272CD"
                    app:fab_colorRipple="#62B2FF"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="-35dp">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/color_primary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/place_name">
                    <TextView
                        android:id="@+id/currentratingtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_star_black_24dp"
                        android:drawablePadding="0dp"
                        android:textSize="18sp"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/primary_dark"
                        android:layout_marginLeft="5dp"/>

                    <TextView
                        android:id="@+id/ratethis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/text_color"
                        android:text="@string/rate"
                        android:layout_marginStart="150dp"/>
                </LinearLayout>


                <ScrollView
                    android:id="@+id/scroller1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:layout_below="@+id/rating"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:fillViewport="true"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/timings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/timingsLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="@color/text_color"
                                android:text="@string/timings"/>
                            <TextView
                                android:id="@+id/timingsValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="@color/text_color"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ticket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/ticketLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="@color/text_color"
                                android:text="@string/ticket"/>
                            <TextView
                                android:id="@+id/ticketValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="@color/text_color"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/bestTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/bestTimeLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="@color/text_color"
                                android:text="@string/bestTime"/>
                            <TextView
                                android:id="@+id/bestTimeValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="@color/text_color"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/toDo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/toDoLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17sp"
                                android:textColor="@color/text_color"
                                android:text="@string/toDo"/>
                            <TextView
                                android:id="@+id/toDoValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="@color/text_color"/>
                        </LinearLayout>

                        <!-- Separator-->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:id="@+id/place_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:textColor="@color/text_color"
                            android:textSize="16sp"
                            android:lineSpacingMultiplier="1.3"/>

                    </LinearLayout>
                </ScrollView>

            </RelativeLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>

