<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.EventPostFragment">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Normal Image-->
                <ImageView
                    android:id="@+id/contentPageImage"
                    android:layout_width="match_parent"
                    android:layout_height="230dp" />
                <!-- Height of image on content page -->

                <!--Image Slider-->
                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/contentPageImageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    custom:auto_cycle="true"
                    custom:indicator_visibility="visible"
                    custom:pager_animation="Accordion"
                    custom:pager_animation_span="1100" />
                <!-- Height of image slider on content page -->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/place_name">

                    <TextView
                        android:id="@+id/currentratingtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_star_black_24dp"
                        android:drawableStart="@drawable/ic_star_black_24dp"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/primary_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/ratethis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="150dp"
                        android:layout_marginStart="150dp"
                        android:text="@string/rate"
                        android:textColor="@color/Blue"
                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Separator-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/rating"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="3dp"
                    android:background="@android:color/darker_gray" />

                <ScrollView
                    android:id="@+id/scroller1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rating"
                    android:layout_marginTop="5dp"
                    android:fillViewport="true"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:scrollbars="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/timings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/timingsLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/timings"
                                android:textColor="@color/primary_text"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/timingsValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primary_text"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ticket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/ticketLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ticket"
                                android:textColor="@color/primary_text"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/ticketValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primary_text"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/bestTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/bestTimeLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bestTime"
                                android:textColor="@color/primary_text"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/bestTimeValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primary_text"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <!-- Separator-->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="7dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/place_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingMultiplier="1.3"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp" />

                        <ListView
                            android:id="@+id/reviewsList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/reviewTextField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Leave a one line tip..."
                                android:inputType="textAutoCorrect"
                                android:textColor="@color/primary_text"
                                android:textColorHint="@color/LightSlateGray" />

                            <Button
                                android:id="@+id/reviewBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Submit tip"
                                android:textAllCaps="false" />
                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>

            </RelativeLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>

